tests/should_succeed/lang/empty.rs
extern crate creusot_std;

pub fn f() {
    return;
}
