tests/should_fail/infinite_size.rs
extern crate creusot_std;

struct Node2(Tree2);
struct Tree2(Node2);
